<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    >

 <androidx.cardview.widget.CardView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:cardElevation="2dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="7dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/musicImage"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:src="@drawable/music_icon"
             app:tint="?attr/AppColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
           />

         <TextView
             android:id="@+id/tvSongDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:text="@string/_00_00"
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
         <TextView
             android:id="@+id/tvMusicName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
             android:layout_marginStart="5dp"
             android:text="@string/music_name"
             android:textColor="#000000"
             android:textSize="18sp"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/tvSongDuration"
             app:layout_constraintStart_toEndOf="@+id/musicImage"
             app:layout_constraintTop_toTopOf="parent"
             />
         <TextView
             android:id="@+id/tvAlbumName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:text="@string/album_name"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/tvMusicName"
             app:layout_constraintEnd_toEndOf="@+id/tvMusicName"
             app:layout_constraintTop_toBottomOf="@+id/tvMusicName"
              />


     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>